# lance-cuvs

./: .gitignore  AGENTS.md  Cargo.toml  Justfile  README.md  pyproject.toml
.github/workflows/: gpu-test.yml  python-build.yml  python-prepare-release.yml  python-release.yml  rust-build.yml
backends/cuvs_26_02/: Cargo.toml  pyproject.toml
backends/cuvs_26_02/python/lance_cuvs_backend_cu12/: __init__.py
backends/cuvs_26_02/python/lance_cuvs_backend_cuvs_26_02/: __init__.py
backends/cuvs_26_02/src/: backend.rs  cuda.rs  lib.rs  python.rs
examples/: smoke.rs
python/lance_cuvs/: __init__.py  _loader.py
src/: backend.rs  cuda.rs  lib.rs  python.rs
tests/: test_loader.py  test_smoke.py
tools/: ci_common.sh  ci_gpu_smoke.sh  ci_python_build.sh  ci_python_release.sh  ci_rust_build.sh  rapids_env.py  run_in_container.sh
