[project]
name = "lance-cuvs"
version = "0.1.0"
description = "cuVS-backed vector index build backend for Lance"
authors = [{ name = "Lance Devs", email = "dev@lance.org" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["pyarrow>=14"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
]

[build-system]
requires = ["maturin>=1.4,<2"]
build-backend = "maturin"

[dependency-groups]
dev = [
    "cmake>=3.30.4",
    "libcuvs-cu12==26.2.0",
    "maturin>=1.4,<2",
    "pyarrow>=14",
    "pylance",
    "pytest>=8",
]

[tool.maturin]
python-source = "python"
module-name = "lance_cuvs._native"
features = ["python"]

[tool.pytest.ini_options]
markers = ["gpu: tests that require a CUDA-capable GPU"]
