[project]
name = "lance-cuvs-backend-cuvs_26_02"
version = "0.1.0"
description = "cuVS 26.02 backend for lance-cuvs"
authors = [{ name = "Lance Devs", email = "dev@lance.org" }]
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
dependencies = ["pyarrow>=14"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
]

[build-system]
requires = ["maturin>=1.4,<2"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"
module-name = "lance_cuvs_backend_cuvs_26_02._native"
features = ["python"]
