[project]
name = "pylance-cuvs-cu12"
version = "0.1.0"
description = "CUDA 12 runtime backend for pylance-cuvs"
authors = [{ name = "Lance Devs", email = "dev@lance.org" }]
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
dependencies = ["pyarrow>=14"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
]

[build-system]
requires = ["maturin>=1.4,<2"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"
module-name = "lance_cuvs_backend_cu12._native"
features = ["python"]
